syntax = "proto3";

option go_package="github.com/hardikroongta8/go_raft/pb";

package pb;

message LogItem{
  int32 term = 1;
  string message = 2;
}

message VoteRequestArgs{
  int32 id = 1;
  int32 term = 2;
  int32 log_length = 3;
  int32 log_term = 4;
}

message VoteResponse{
  int32 voter_id = 1;
  int32 term = 2;
  bool granted = 3;
}

message LogRequestArgs{
  int32 term = 1;
  int32 leader_id = 2;
  int32 prefix_len = 3;
  int32 prefix_term = 4;
  int32 leader_commit = 5;
  repeated LogItem suffix = 6;
}

message LogResponse{
  int32 followerID = 1;
  int32 term = 2;
  int32 ackLen = 3;
  bool success = 4;
}

service Raft{
  rpc VoteRequest(VoteRequestArgs) returns (VoteResponse){}
  rpc LogRequest(LogRequestArgs) returns (LogResponse){}
}